remove ValuesController and use swagger as API document.

--- a/KB.WebApi/Views/Shared/_Layout.cshtml
+++ b/KB.WebApi/Views/Shared/_Layout.cshtml
@@ -23,8 +23,8 @@
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("主页", "Index", "Home", new { area = "" }, null)</li>
-                    <li>@Html.ActionLink("API", "Index", "Help", new { area = "" }, null)</li>
-                    <li>@Html.ActionLink("Swagger Help", "", "Swagger", new { area = "" }, null)</li>
+                    @*<li>@Html.ActionLink("API", "Index", "Help", new { area = "" }, null)</li>*@
+                    <li>@Html.ActionLink("API", "", "Swagger", new { area = "" }, null)</li>
                 </ul>
             </div>
         </div>
